# Job_tracker_backend

./: .gitignore  pyproject.toml  requirements.txt  server.py
src/: main.py
src/api/: chat.py  jobs.py  upload_pdf.py
src/config/: logger.py  settings.py
src/core/: exceptions.py  fallback.py  response.py  retry.py  settings.py
src/prompt/: system_prompt.py
src/prompts/: job_prompts.py
src/schemas/: upload.py
src/services/ai/: llm_service.py
src/services/chunking/: semantic_chunker.py
src/services/embeddings/: embedding_service.py
src/services/jobs/: job_service.py
src/services/parser/: parser_router.py  pdf_parser.py
src/services/pinecone/: pinecone_service.py
src/services/uploads/: storage_service.py
src/services/validation/: extension_validator.py  mime_validator.py  size_validator.py
src/test/: run_tests.py  test_ddg.py  test_grounding.py  test_jobs.py  test_pdf_upload.py
