[project]
name = "pdf-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "litellm>=1.30.0,<1.50.0",
    "google-generativeai>=0.7.0",
    "pymupdf>=1.28.0",
    "sentence-transformers",
    "pinecone>=9.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
